# src/apis/controllers/order.js
@@ -2,7 +2,69 @@ const Error = require("../utils/error");
 const { Order } = require("../models/order")
 const Inventory = require("../models/inventory")
 const Variant = require("../models/variant")
+const rp = require('request-promise')
 
+const payment_method ={
+  "1": "COD",
+  "2": "Senpay",
+  "4": "Compine",
+  "5": "PayLater"
+}
+const payment_status = {
+  "1": "NotPaid",
+  "2": "CODCarrier",
+  "3": "Paid",
+  "4": "Completed",
+  "5": "Refund",
+  "6": "Waiting",
+  "7": "Reject",
+  "14": "PartialPaid",
+  "15": "PartialRefund"
+}
+const order_status = {
+  "2": "New",
+  "3": "Proccessing",
+  "6": "Shipping",
+  "7": "POD",
+  "8": "Completed",
+  "10": "Closed",
+  "11": "Delaying",
+  "12": "Delay",
+  "13": "Cancelled",
+  "14": "Splitting",
+  "15": "Splitted",
+  "19": "Merging",
+  "21": "Returning",
+  "22": "Returned",
+  "23": "WaitingSendo",
+}
+const step = [
+  {
+    name: 'Đặt hàng và duyệt',
+    isCreated: true,
+    createdAt: Date.now()
+  },
+  {
+    name: 'Đóng gói',
+    isCreated: false,
+  },
+  {
+    name: 'Xuất kho',
+    isCreated: false,
+  },
+  {
+    name: 'Hoàn thành',
+    isCreated: false,
+  },
+  {
+    name: 'Đã hoàn trả',
+    isCreated: false,
+  },
+  {
+    name: 'Đã hủy',
+    isCreated: false,
+  },
+]
 const checkComplete = async (_id) => {
   try {
     const order = await Order.findOne({ _id })
@@ -128,6 +190,109 @@ module.exports.createOrder = async (req,res) => {
   } catch(e) {
     console.log(e.message)
     res.status(500).send(Error({ message: 'Create order went wrong!'}))
+  }
+}
+
+module.exports.createLazadaOrder = async (req,res) => {
+  const item = req.body;
+  const listItem = await rp({
+    method: 'GET',
+    url:"http://localhost:5000/api/lazada/orders/items/"+ item.order_number,
+    headers: {
+      'Authorization': 'Bearer ' + req.mongoToken,
+      'Platform-Token': req.accessToken
+    },
+    json: true
+  })
+
+  const order = new Order({
+    source: "lazada",
+    orderStatus: item.statuses[0],
+    code: item.order_number,
+    totalPrice: item.price,
+    totalQuantity: item.items_count,
+    //order infomation
+    paymentMethod: item.payment_method,
+    note: item.note,
+    //shipping infomation
+    deliveryInfo: item.delivery_info,
+    shippingFee: item.shipping_fee,
+    //customer overview
+    customerId: item.customerId,
+    customerName: item.address_shipping.first_name + item.address_shipping.last_name,
+    customerEmail: "",
+    customerPhone: item.address_shipping.phone,
+    customerAddress: item.address_shipping.address1
+    //+", "+address_shipping.address2
+    +", "+item.address_shipping.address5
+    +", "+item.address_shipping.address4
+    +", "+item.address_shipping.address3,
+
+    //list item
+    lineItems: listItem,
+
+    createdAt: item.created_at,
+    updatedAt: item.updated_at,
+    step: step
+  })
+  try {
+    await order.save();
+    res.send(order);
+  } catch (e) {
+    res.status(500).send(Error(e));
+  }
+}
+module.exports.createSendoOrder = async (req,res) => {
+
+  const item = req.body;
+  const created_at = new Date(item.sales_order.created_date_time_stamp * 1000)
+  const updated_at = new Date(item.sales_order.updated_date_time_stamp * 1000)
+  // const regionId = item.sales_order.ship_to_region_id
+  // var region= await rp({
+  //   method: 'GET',
+  //   url:'http://localhost:5000/api/sendo/region/'+regionId,
+  //   headers: {
+  //     'Authorization': 'Bearer ' + req.mongoToken,
+  //     'Platform-Token': req.accessToken
+  //   },
+  //   json: true
+  // })
+  //change field name
+  item.sku_details.forEach(e => {
+    e.name = e.product_name
+  });
+
+  const order = new Order({
+    source: "sendo",
+    code: item.sales_order.order_number,
+    orderStatus: order_status[`${item.sales_order.order_status}`],
+    //order infomation
+    paymentMethod: payment_method[`${item.sales_order.payment_method}`],
+    discount: item.sales_order.voucher_value,
+    paymentStatus: payment_status[`${item.sales_order.payment_status}`],
+    note: item.sales_order.note,
+    //shipping infomation
+    deliveryInfo: item.sales_order.carrier_name,
+    trackingNumber: item.sales_order.tracking_number,
+    shippingFee: item.sales_order.shipping_fee,
+    //customer overview
+    customerName: item.sales_order.receiver_name,
+    customerEmail: item.sales_order.receiver_email,
+    customerPhone: item.sales_order.shipping_contact_phone,
+    customerAddress: item.sales_order.ship_to_address,
+    //+", "+region.result.name,
+    
+    //list item
+    lineItems: item.sku_details, 
+    createdAt: created_at,
+    updatedAt: updated_at,
+    step: step
+  })
+  try {
+    await order.save();
+    res.send(order);
+  } catch (e) {
+    res.status(500).send(Error(e));
   }
 }
 
