# src/apis/routers/lazada.js
@@ -43,12 +43,13 @@ router.post('/update-seller-email', auth, controller.updateSellerEmail) //not wo
 router.post('/upload-image', upload.single('image') ,auth , controller.uploadImage)
 //router.patch('/products/:sellerSku',auth, controller.updateProduct)  //api cua laz thay doi
 router.patch('/products/',auth, controller.updateProduct)
+router.patch('/products/price-quantity',auth, controller.updatePriceQuantity)
 router.post('/products', auth, controller.createProductOnLazada)
 router.delete('/products/:sellerSku', auth, controller.deleteProduct)
 
 router.get('/cancel-reason', auth, controller.getCancelReason)
 
-router.get('/order', auth, controller.searchOrder)
+router.get('/orders', auth, controller.searchOrder)
 router.get('/orders/:id', auth, controller.getOrderByIdOnLazada)
 router.post('/orders/cancel/:id', auth, controller.cancelOrderOnLazada)
 
